# Projekt_WymiAR

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/pracazaliczeniowa/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: RotationHandle.glb  pointerRing.glb
app/src/main/assets/models/: cat.glb  dog.glb  fox.glb  owl.glb  parrot.glb  quail.glb  rat.glb  van.glb
app/src/main/java/com/example/WymiAR/: App.kt  TODO.txt
app/src/main/java/com/example/WymiAR/Activities/: ARActivity.kt  MainActivity.kt  (+3 more)
app/src/main/java/com/example/pracazaliczeniowa/: ARActivity.kt  App.kt  AppModelNode.kt  AppModelNodeCoverter.kt  AppSettings.kt  DimensionOverlayView.kt  LibraryActivity.kt  MainActivity.kt  MeasurableModelNode.kt  MeasureTapeOverlayView.kt  ModelControlOverlayView.kt  ModelItem.kt  ModelLibraryAdapter.kt  ModelPreviewActivity.kt  ProfileManager.kt  ProfilePickerDialog.kt  SettingsActivity.kt  TODO.txt
app/src/main/res/color/: library_chip_background_selector.xml  library_chip_text_selector.xml
app/src/main/res/drawable/: bg_badge_imported.xml  bg_badge_saved.xml  bg_color_patch_rect.xml  bg_rounded_layout.xml  bg_shutter_button.xml  bg_size_badge.xml  circular_progress.xml  ic_add.xml  ic_animation.xml  ic_arrow_back.xml  ic_arrow_back_color_invert.xml  ic_arrow_back_white.xml  ic_arrow_right.xml  ic_bg_wymiar.xml  ic_camera.xml  ic_circle_delete.xml  ic_color_palette.xml  ic_delete.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_library.xml  ic_measure_tape.xml  ic_model_placeholder.xml  ic_more_vert.xml  ic_phone_screen.xml  ic_play_pause.xml  ic_position.xml  ic_refresh.xml  ic_revert.xml  ic_rotate.xml  ic_save.xml  ic_scale.xml  ic_settings.xml  ic_skip_next.xml  ic_sort_asc.xml  ic_sort_desc.xml  ic_stack.xml  ic_wireframe.xml  ic_wymiar.xml  rounded_button.xml
app/src/main/res/layout/: activity_ar.xml  activity_ar_options.xml  activity_library.xml  activity_model_preview.xml  activity_settings.xml  activity_storage.xml  dialog_background_color_picker.xml  dialog_confirm.xml  dialog_export_profile_picker.xml  dialog_input.xml  dialog_popup.xml  dialog_profile_picker.xml  dialog_radio.xml  item_cached_model.xml  item_model_card.xml  item_picker_card.xml  item_popup_menu.xml  item_profile_slot.xml  model_picker_sheet.xml  view_model_controls.xml  view_model_dimension_label.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-pl/: strings.xml
app/src/test/java/com/example/WymiAR/: ExampleUnitTest.kt
app/src/test/java/com/example/pracazaliczeniowa/: ExampleUnitTest.kt
converter/: build.gradle.kts
converter/src/main/: AndroidManifest.xml
converter/src/main/cpp/: CMakeLists.txt  glb_converter.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+87 files in other folders)
